--- a/app/src/main/res/layout/fragment_event.xml
+++ b/app/src/main/res/layout/fragment_event.xml
@@ -34,26 +34,35 @@
             android:layout_marginStart="16dp"
             android:layout_weight="1"
             android:text="Events"
-            android:textSize="28sp" />
+            android:textSize="20sp" />
 
-        <EditText
-            android:id="@+id/editTextSearchEventLocation"
+        <Button
+            android:id="@+id/find_by_creator"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_margin="8dp"
             android:layout_weight="1"
-            android:ems="9"
-            android:hint="Enter Location"
-            android:inputType="textPersonName"
-            android:minHeight="48dp" />
+            android:textSize="12sp"
+            android:text="Creator" />
 
-        <ImageButton
-            android:id="@+id/btn_search_by_location"
+        <Button
+            android:id="@+id/find_by_type"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_margin="8dp"
             android:layout_weight="1"
-            android:src="@android:drawable/ic_menu_search" />
+            android:textSize="12sp"
+            android:text="Type" />
+
+        <Button
+            android:id="@+id/find_by_level"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="8dp"
+            android:layout_weight="1"
+            android:textSize="12sp"
+            android:text="Level" />
+
     </LinearLayout>
 
 
