--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -21,7 +21,7 @@
     <fragment
         android:id="@+id/navigation_dashboard"
         android:name="com.example.sportshub.equipment.EquipmentFragment"
-        android:label="@string/title_dashboard"
+        android:label="@string/title_equipment"
         tools:layout="@layout/fragment_equipment" />
 
     <fragment
