--- a/app/src/main/res/layout/fragment_equipment.xml
+++ b/app/src/main/res/layout/fragment_equipment.xml
@@ -6,15 +6,32 @@
     android:layout_height="match_parent"
     tools:context=".equipment.EquipmentFragment">
 
-    <SearchView
-        android:id="@+id/filter_equipment_by_sport_type"
+    <LinearLayout
+        android:id="@+id/equipment_search_bar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:queryHint="Filter By Sport Type"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintEnd_toEndOf="parent">
-    </SearchView>
+        android:orientation="horizontal">
+
+        <EditText
+            android:id="@+id/edit_text_filter_equipment_by_sport_type"
+            android:hint="Filter by Sport Type"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="8dp"
+            android:layout_weight="1"/>
+
+        <ImageButton
+            android:id="@+id/btn_filter_equipment_by_sport_type"
+            android:layout_width="64dp"
+            android:layout_height="56dp"
+            android:layout_marginEnd="8dp"
+            android:layout_marginStart="16dp"
+            android:src="@drawable/ic_search_black_24dp" />
+
+    </LinearLayout>
 
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
@@ -34,6 +51,6 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/filter_equipment_by_sport_type" />
+        app:layout_constraintTop_toBottomOf="@id/equipment_search_bar" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
