Refactored event items on profile page to be clickable

--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -28,7 +28,18 @@
         android:id="@+id/navigation_profile"
         android:name="com.example.sportshub.profile.ProfileFragment"
         android:label="@string/title_profile"
-        tools:layout="@layout/fragment_profile" />
+        tools:layout="@layout/fragment_profile" >
+        <action
+            android:id="@+id/action_navigation_profile_to_eventDetailFragment"
+            app:destination="@id/eventDetailFragment" />
+        <action
+            android:id="@+id/action_navigation_profile_to_navigation_profile"
+            app:destination="@id/navigation_profile" />
+        <argument
+            android:name="username"
+            app:argType="string"
+            android:defaultValue=""/>
+    </fragment>
     <fragment
         android:id="@+id/eventCreateFragment"
         android:name="com.example.sportshub.event.EventCreateFragment"
