--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -19,10 +19,14 @@
     </fragment>
 
     <fragment
-        android:id="@+id/navigation_dashboard"
+        android:id="@+id/navigation_equipment"
         android:name="com.example.sportshub.equipment.EquipmentFragment"
         android:label="@string/title_equipment"
-        tools:layout="@layout/fragment_equipment" />
+        tools:layout="@layout/fragment_equipment" >
+        <action
+            android:id="@+id/action_navigation_equipment_to_createEquipmentFragment"
+            app:destination="@id/createEquipmentFragment" />
+    </fragment>
 
     <fragment
         android:id="@+id/navigation_profile"
@@ -82,4 +86,9 @@
             app:argType="string"
             android:defaultValue=""/>
     </fragment>
+    <fragment
+        android:id="@+id/createEquipmentFragment"
+        android:name="com.example.sportshub.equipment.CreateEquipmentFragment"
+        android:label="create_equipment_fragment"
+        tools:layout="@layout/create_equipment_fragment" />
 </navigation>
