--- a/app/src/main/res/layout/equipment_item.xml
+++ b/app/src/main/res/layout/equipment_item.xml
@@ -1,43 +1,43 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:background="@color/quantum_bluegrey200"
-    android:layout_margin="8dp">
+    android:layout_margin="8dp"
+    android:background="@color/quantum_bluegrey200">
 
     <TextView
         android:id="@+id/equipment_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_margin="16dp"
+        android:textColor="@color/purple_500"
+        android:textSize="24sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        android:textSize="24sp"
-        android:textColor="@color/purple_500"
-        android:layout_margin="16dp"
         tools:text="Title" />
 
     <TextView
         android:id="@+id/equipment_description"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_margin="8dp"
+        android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/equipment_title"
-        android:layout_margin="8dp"
-        android:textSize="20sp"
         tools:text="description" />
 
     <TextView
         android:id="@+id/equipment_owner"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textSize="24sp"
-        android:textColor="@color/quantum_bluegrey900"
         android:layout_margin="8dp"
         android:layout_marginStart="16dp"
+        android:textColor="@color/quantum_bluegrey900"
+        android:textSize="24sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/equipment_description"
         tools:text="owner" />
@@ -46,9 +46,9 @@
         android:id="@+id/equipment_contact"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textSize="20sp"
         android:layout_margin="8dp"
         android:layout_marginEnd="16dp"
+        android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/equipment_description"
         tools:text="contact" />
@@ -58,10 +58,10 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_margin="8dp"
-        android:textSize="20sp"
-        app:layout_constraintEnd_toStartOf="@+id/equipment_contact"
-        app:layout_constraintStart_toEndOf="@+id/equipment_owner"
-        app:layout_constraintTop_toBottomOf="@+id/equipment_description"
+        android:textSize="16sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/equipment_sport_type"
         tools:text="location" />
 
     <TextView
@@ -70,9 +70,8 @@
         android:layout_height="wrap_content"
         android:textSize="20sp"
         android:layout_margin="8dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/equipment_location"
+        app:layout_constraintEnd_toStartOf="@+id/equipment_contact"
+        app:layout_constraintStart_toEndOf="@+id/equipment_owner"
+        app:layout_constraintTop_toBottomOf="@+id/equipment_description"
         tools:text="sport type" />
 </androidx.constraintlayout.widget.ConstraintLayout>
