user addition implemented

--- a/code/frontend/src/components/EventListDetail.css
+++ b/code/frontend/src/components/EventListDetail.css
@@ -48,7 +48,10 @@
   align-items: center;
   text-align: center;
   margin-bottom: 20px;
+  margin-left: 660px;
 }
+
+
 
 .participants {
   margin-left:500px;
