--- a/app/src/main/res/layout/event_detail_fragment.xml
+++ b/app/src/main/res/layout/event_detail_fragment.xml
@@ -17,7 +17,7 @@
         android:layout_marginEnd="32dp"
         android:textAlignment="center"
         android:textColor="#447744"
-        android:textSize="48sp"
+        android:textSize="24sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
@@ -42,9 +42,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="32dp"
-        android:layout_marginTop="16dp"
+        app:layout_constraintBottom_toBottomOf="@+id/list_related_equipment"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/event_detail_event_description"
+        app:layout_constraintTop_toTopOf="@+id/list_related_equipment"
         tools:text="Creator" />
 
     <TextView
@@ -83,11 +83,10 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="32dp"
-        android:layout_marginTop="16dp"
         android:layout_marginEnd="32dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/event_detail_event_creator"
+        app:layout_constraintTop_toBottomOf="@+id/list_related_equipment"
         tools:text="Location" />
 
     <TextView
@@ -251,12 +250,16 @@
 
     <Button
         android:id="@+id/list_related_equipment"
-        android:layout_width="128dp"
-        android:layout_height="72dp"
-        android:layout_margin="16dp"
+        android:layout_width="96dp"
+        android:layout_height="56dp"
+        android:backgroundTint="@color/quantum_googgreen500"
         android:text="Related Equipment"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent" />
+        android:textSize="10sp"
+
+        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_margin="8dp"
+        app:layout_constraintStart_toEndOf="@+id/event_detail_event_creator"
+        app:layout_constraintTop_toBottomOf="@+id/event_detail_event_description" />
 
     <TextView
         android:id="@+id/event_detail_event_duration"
